--- a/README.ipynb
+++ b/README.ipynb
@@ -18,7 +18,7 @@
     "### 1. Information about source data and some statistics\n",
     "We use data from [Yandex.Realty](https://realty.yandex.ru) which contains real estate listings for apartments in **St. Petersburg only for rent** from 2016 till the middle of August 2018.\n",
     "\n",
-    "We have previously deleted outliers from the original detaset. Our dataset is available in the file named **spb.real.estate.archive.rent_cleaned_spb.tsv**. The code we used to work with the data is avaible in the file named **final_project_code**.\n",
+    "We have previously deleted outliers from the original detaset. Our dataset is available here: https://docs.google.com/spreadsheets/d/18I0iXt37c4mLTdrPzMrKlVpcKdYzgvmW1sfuTeOCdCA/edit#gid=938229124. The code we used to work with the data is avaible in the file named **final_project_code**.\n",
     "\n",
     "Let's have a look at all the variables we have in the dataset **that we use for further analysis.**\n",
     "\n",
